[package]
name = "piston2d-scroll_controller"
version = "0.4.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["scroll", "controller", "piston"]
description = "A Piston library for handling scroll areas"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/scroll_controller.git"
homepage = "https://github.com/PistonDevelopers/scroll_controller"
documentation = "https://docs.rs/piston2d-scroll_controller"

[lib]
name = "scroll_controller"

[dependencies]
pistoncore-input = "0.21.0"

[dev-dependencies]
piston = "0.37.0"
pistoncore-sdl2_window = "0.50.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.53.0"
